Overlapping issues in terms

--- a/client/src/app.sass
+++ b/client/src/app.sass
@@ -69,6 +69,7 @@ body
 	grid-row: 1/2
 	max-width: 100vw
 	width: 100%
+	z-index: 2
 	#logo-Text
 		display: none
 		text-transform: uppercase
@@ -131,6 +132,7 @@ body
 	background: $clr1
 	display: flex
 	height: 5vh
+	z-index: 2
 	p
 		margin: auto 0 auto 1em
 		font-size: 0.8em
@@ -224,9 +226,10 @@ body
 	display: grid
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr
 	height: auto
-	overflow: auto
+	overflow: scroll
 	overflow-x: hidden
 	width: 100%
+	z-index: 1
 	#content-Feed
 		display: flex
 		flex-direction: column
@@ -582,7 +585,7 @@ body
 #terms
 	background: $clr4
 	grid-column: 1/9
-	height: auto
+	height: 100%
 	margin: 1em
 	padding-top: 1em
 	h1
